@@ -9,12 +9,16 @@ module Netzke
 
   module Core
     class Engine < ::Rails::Engine
-      config.after_initialize do
-        # Do some initialization which only is possible after Rails is initialized
-        Netzke::Core.ext_location ||= ::Rails.root.join("public", "extjs")
-        Netzke::Core.touch_location ||= ::Rails.root.join("public", "sencha-touch")
-        Netzke::Core.with_icons = File.exists?("#{::Rails.root}/public#{Netzke::Core.icons_uri}") if Netzke::Core.with_icons.nil?
+      # before loading initializers and classes (in app/**)
+      config.before_initialize do
+        Netzke::Core.ext_location = Rails.root.join("public", "extjs")
+        Netzke::Core.touch_location = Rails.root.join("public", "sencha-touch")
         Netzke::Core.persistence_manager_class = Netzke::Core.persistence_manager.constantize rescue nil
+      end
+
+      # after loading initializers and classes
+      config.after_initialize do
+        Netzke::Core.with_icons = File.exists?("#{::Rails.root}/public#{Netzke::Core.icons_uri}") if Netzke::Core.with_icons.nil?
       end
     end
   end
